# ZsyAndroid

./: Git命令  Git学习  README.en.md  README.md  adb命令  build.gradle  build.gradle.bak  gradle.properties  import-summary.txt  jenkins学习  settings.gradle  设计模式
Bluetooth/: build.gradle
Bluetooth/src/main/: AndroidManifest.xml
apiDemo/: build.gradle
apiDemo/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: book.xml
appsocket/: build.gradle
appsocket/src/main/: AndroidManifest.xml
assist/: build.gradle  keyTest.jks
assist/src/main/: AndroidManifest.xml
base-diskcache-master/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
jnidemo/: CMakeLists.txt  build.gradle  工具配置.txt
jnidemo/src/main/: AndroidManifest.xml
jnidemo/src/main/cpp/: Bspatch.c  JniTest.cpp  Moniter.c
jnidemo/src/main/cpp/bzip2/: bzlib.c
jnidemo/src/main/java/com/zsy/jni/: BsPatchUtil.java  CalculateTools.java  JniTest.java  MonitorJni.java
jnidemo/src/main/java/com/zsy/ui/: MainActivity.java
jnidemo/src/main/jni/: Android.mk  Calculate.c  JniTest.c  Moniter.c  学习说明.txt
jnidemo/src/main/res/layout/: activity_main.xml
jnidemo/src/main/res/values/: strings.xml
mavenlib/: build-nexus.gradle  build.gradle
mavenlib/src/main/: AndroidManifest.xml
mvp/: build.gradle
mvp/src/main/: AndroidManifest.xml
rxjava/: build.gradle
rxjava/src/main/: AndroidManifest.xml
rxokretrofit/: build.gradle
rxokretrofit/src/main/: AndroidManifest.xml
structure/: build.gradle
structure/文件/: RedBlackBinaryTree.html
vitamio_lib/: build.gradle
zlib/: build.gradle
zsyOkHttp/: build.gradle
学习/: jenkins学习
学习/maven/: Maven-Nexus学习.txt
学习/sqlite/: Sqlite学习
学习笔记/: Linux命令  Monkey测试学习  jenkins学习
学习笔记/MySql/: MySql介绍配置  MySql学习2  MySql学习3  MySql安装配置  Mysql学习1
学习笔记/SSM/: 总结文件
学习笔记/SqlServer/: SqlServer学习  表操作
学习笔记/adb/: adb命令
学习笔记/ant/: Ant编译打包学习
学习笔记/jdbc/: jdbc.txt
学习笔记/sqlite/: 自带行数索引
(+583 files in other folders)
